--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,43 @@
-.highlight {
-    color: red;
+:host {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+}
+
+.nav-wrapper {
+    position: relative;
+    box-shadow: 0px 2px 12px rgba(197, 197, 197, 0.3);
+    .nav-btn-wrapper {
+        max-width: 600px;
+        margin: 0 auto;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        min-height: var(--nav-height);
+    }
+    .nav-btn {
+        text-decoration: none;
+        color: #011b30;
+        font-size: 1.6rem;
+        text-transform: uppercase;
+        display: inline-block;
+        position: relative;
+        &::before {
+            content: '';
+            position: absolute;
+            bottom: -22px;
+            left: 0;
+            width: 0;
+            height: 3px;
+            border-radius: 8px;
+        }
+        &.highlight::before {
+            transition: width 0.3s;
+            width: 100%;
+            background: #0d7785;
+        }
+    }
 }
