--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,10 @@
     <a class="nav-btn" routerLinkActive="highlight" routerLink="/portfolio">Portfolio</a>
     <a class="nav-btn" routerLinkActive="highlight" routerLink="/profile">Profile</a>
   </div>
+  <div class="nav-alt-btn-wrapper">
+    <a class="nav-alt-btn" routerLinkActive="highlight">Sign Up</a>
+
+  </div>
 </nav>
 
 <router-outlet></router-outlet>
