--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,11 @@
 
 :root {
     --nav-height: 70px;
+    --color-flamingo: #EE4540;
+    --color-brick-red: #C72C41;
+    --color-claret: #801336;
+    --color-cab-sav: #510A32;
+    --color-tamarinf: #2D142C;
 }
 
 main {
