--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,9 +6,21 @@
     top: 0;
 }
 
+%default-nav-button {
+    font-family: 'Inconsolata', monospace;
+    text-decoration: none;
+    color: var(--color-tamarind);
+    font-size: 1.6rem;
+    display: inline-block;
+    position: relative;
+    font-weight: bold;
+}
+
 .nav-wrapper {
     position: relative;
     box-shadow: 0px 2px 12px rgba(197, 197, 197, 0.3);
+    display: flex;
+    padding: 0px 16px;
     .nav-btn-wrapper {
         max-width: 600px;
         margin: 0 auto;
@@ -19,12 +31,7 @@
         min-height: var(--nav-height);
     }
     .nav-btn {
-        text-decoration: none;
-        color: #011b30;
-        font-size: 1.6rem;
-        text-transform: uppercase;
-        display: inline-block;
-        position: relative;
+        @extend %default-nav-button;
         &::before {
             content: '';
             position: absolute;
@@ -37,7 +44,19 @@
         &.highlight::before {
             transition: width 0.3s;
             width: 100%;
-            background: #0d7785;
+            background: var(--color-flamingo);
         }
+    }
+    .nav-alt-btn-wrapper {
+        display: flex;
+        align-items: center;
+    }
+    .nav-alt-btn {
+        @extend %default-nav-button;
+        background: var(--color-flamingo);
+        color: #fff;
+        padding: 10px 20px;
+        font-weight: bold;
+        border-radius: 20px;
     }
 }
