--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -37,14 +37,15 @@
             position: absolute;
             bottom: -22px;
             left: 0;
-            width: 0;
+            width: 100%;
             height: 3px;
             border-radius: 8px;
+            transform: scaleX(0);
         }
         &.highlight::before {
-            transition: width 0.3s;
-            width: 100%;
+            transition: transform 0.3s;
             background: var(--color-flamingo);
+            transform: scaleX(1);
         }
     }
     .nav-alt-btn-wrapper {
