--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,9 @@
 <main>
-  <p>
-    home works!
-  </p>
+
+  <section class="header">
+    <div class="content-wrapper">
+      <h1>Manage your crypto assets</h1>
+    </div>
+  </section>
 
 </main>
