--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,3 +13,10 @@ main {
     background: #f7f7f7;
     height: calc(100% - var(--nav-height));
 }
+
+h1,
+h2,
+h3,
+h4 {
+    font-family: 'Montserrat', sans-serif;
+}
