--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,6 +14,10 @@
     display: inline-block;
     position: relative;
     font-weight: bold;
+    margin-right: 35px;
+    &:last-child {
+        margin-right: 0;
+    }
 }
 
 .nav-wrapper {
@@ -22,12 +26,11 @@
     display: flex;
     padding: 0px 16px;
     .nav-btn-wrapper {
-        max-width: 600px;
-        margin: 0 auto;
+        // max-width: 600px; // margin: 0 auto;
         width: 100%;
         display: flex;
         align-items: center;
-        justify-content: space-around;
+        justify-content: flex-end;
         min-height: var(--nav-height);
     }
     .nav-btn {
@@ -47,10 +50,6 @@
             background: var(--color-flamingo);
             transform: scaleX(1);
         }
-    }
-    .nav-alt-btn-wrapper {
-        display: flex;
-        align-items: center;
     }
     .nav-alt-btn {
         @extend %default-nav-button;
